syntax = "proto3";

package testing.snippets;

import "google/api/client.proto";
import "google/longrunning/operations.proto";
import "google/api/resource.proto";

service Snippets {
  option (google.api.default_host) = "snippets.example.com";

  rpc MethodDefaultValues(DefaultValuesRequest) returns(Response) {
    // Test snippet generation of signature that includes repeated fields.
    option (google.api.method_signature) = "repeated_double,repeated_nested_message,repeated_resource_name";
  }

  rpc MethodOneSignature(SignatureRequest) returns(Response) {
    option (google.api.method_signature) = "a_string,an_int,a_bool";
  }

  rpc MethodThreeSignatures(SignatureRequest) returns(Response) {
    option (google.api.method_signature) = "a_string,an_int,a_bool";
    option (google.api.method_signature) = "a_string,a_bool";
    option (google.api.method_signature) = "";
  }

  rpc MethodResourceSignature(ResourceSignatureRequest) returns(Response) {
    option (google.api.method_signature) = "first_name,second_name,third_name";
    option (google.api.method_signature) = "first_name";
  }

  rpc MethodLroSignatures(SignatureRequest) returns(google.longrunning.Operation) {
    option (google.api.method_signature) = "a_string,an_int,a_bool";
    option (google.longrunning.operation_info) = {
      response_type: "LroResponse"
      metadata_type: "LroMetadata"
    };
  }

  rpc MethodLroResourceSignature(ResourceSignatureRequest) returns(google.longrunning.Operation) {
    option (google.api.method_signature) = "first_name,second_name,third_name";
    option (google.longrunning.operation_info) = {
      response_type: "LroResponse"
      metadata_type: "LroMetadata"
    };
  }

  rpc MethodServerStreaming(SignatureRequest) returns(stream Response) {
    option (google.api.method_signature) = "a_string,a_bool";
    option (google.api.method_signature) = "";
  }

  rpc MethodServerStreamingResources(ResourceSignatureRequest) returns(stream Response) {
    option (google.api.method_signature) = "first_name,second_name,third_name";
  }

  rpc MethodBidiStreaming(stream SignatureRequest) returns (stream Response);

  // Test name collision handling in snippets.
  rpc TaskMethod(Task) returns (Task);
}

message AResource {
  option (google.api.resource) = {
    type: "snippets.example.com/AResource"
    pattern: "items/{item_id}/parts/{part_id}"
  };
  string name = 1;
}

message WildcardResource {
  option (google.api.resource) = {
    type: "snippets.example.com/WildcardResource"
    pattern: "*"
  };
  string name = 1;
}

message MultiPatternResource {
  option (google.api.resource) = {
    type: "unittests.example.com/MultiPatternResource"
    pattern: "root/{root_a_id}/items/{item_id}"
    pattern: "root/{root_b_id}/items/{item_id}"
  };
  string name = 1;
}

message AnotherMessage {
}

enum Enum {
  DEFAULT = 0; // First value must be 0 and is the default
}

message DefaultValuesRequest {
  message NestedMessage {
  }
  enum NestedEnum {
    // Test enum prefix removal.
    NESTEDENUM_DEFAULT_VALUE = 0; // First value must be 0 and is the default
  }

  double single_double = 1;
  float single_float = 2;
  int32 single_int32 = 3;
  int64 single_int64 = 4;
  uint32 single_uint32 = 5;
  uint64 single_uint64 = 6;
  sint32 single_sint32 = 7;
  sint64 single_sint64 = 8;
  fixed32 single_fixed32 = 9;
  fixed64 single_fixed64 = 10;
  sfixed32 single_sfixed32 = 11;
  sfixed64 single_sfixed64 = 12;
  bool single_bool = 13;
  string single_string = 14;
  bytes single_bytes = 15;
  AnotherMessage single_message = 16;
  NestedMessage single_nested_message = 17;
  Enum single_enum = 18;
  NestedEnum single_nested_enum = 19;
  repeated double repeated_double = 21;
  repeated float repeated_float = 22;
  repeated int32 repeated_int32 = 23;
  repeated int64 repeated_int64 = 24;
  repeated uint32 repeated_uint32 = 25;
  repeated uint64 repeated_uint64 = 26;
  repeated sint32 repeated_sint32 = 27;
  repeated sint64 repeated_sint64 = 28;
  repeated fixed32 repeated_fixed32 = 29;
  repeated fixed64 repeated_fixed64 = 30;
  repeated sfixed32 repeated_sfixed32 = 31;
  repeated sfixed64 repeated_sfixed64 = 32;
  repeated bool repeated_bool = 33;
  repeated string repeated_string = 34;
  repeated bytes repeated_bytes = 35;
  repeated AnotherMessage repeated_message = 36;
  repeated NestedMessage repeated_nested_message = 37;
  repeated Enum repeated_enum = 38;
  repeated NestedEnum repeated_nested_enum = 39;
  string single_resource_name = 40 [(google.api.resource_reference).type = "snippets.example.com/AResource"];
  repeated string repeated_resource_name = 41 [(google.api.resource_reference).type = "snippets.example.com/AResource"];
  string single_wildcard_resource = 42 [(google.api.resource_reference).type = "snippets.example.com/WildcardResource"];
  repeated string repeated_wildcard_resource = 43 [(google.api.resource_reference).type = "snippets.example.com/WildcardResource"];
  string multi_pattern_resource_name = 44 [(google.api.resource_reference).type = "unittests.example.com/MultiPatternResource"];
  repeated string repeated_multi_pattern_resource_name = 45 [(google.api.resource_reference).type = "unittests.example.com/MultiPatternResource"];
  map<int32, string> map_int_string = 46;
}

message SignatureRequest {
  string a_string = 1;
  int32 an_int = 2;
  bool a_bool = 3;
}

message SimpleResource {
  option (google.api.resource) = {
    type: "snippets.example.com/SimpleResource"
    pattern: "items/{item_id}"
  };
  string name = 1;
}

message ResourceSignatureRequest {
  string first_name = 1 [(google.api.resource_reference).type = "snippets.example.com/SimpleResource"];
  string second_name = 2 [(google.api.resource_reference).type = "snippets.example.com/SimpleResource"];
  string third_name = 3 [(google.api.resource_reference).type = "snippets.example.com/SimpleResource"];
}

message Task {
}

message Response {
}

message LroResponse {
}

message LroMetadata {
}
